{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "5de680c5-0116-488c-bcd2-c0232f4e02a3",
            "actions": [
                {
                    "name": "Action",
                    "type": "Button",
                    "id": "ffdffef9-0521-4c13-8292-1f9b53a22f78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMove",
                    "type": "Button",
                    "id": "7d753514-22d3-4ce6-8282-bc0a778ce828",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "RightMove",
                    "type": "Button",
                    "id": "0b84e804-fee9-42f3-83da-a0c757829976",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0a027bda-811b-44c9-b095-2a61b5077192",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PoleSwitching",
                    "type": "Button",
                    "id": "48ee17bb-a75c-4b10-af6c-77a2e72d303c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MagnetPower",
                    "type": "Button",
                    "id": "bad19f2e-b46e-4fb0-ad49-8fc259edf861",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "69dc00ae-fb70-454f-9618-690557ff74c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootAngle",
                    "type": "Value",
                    "id": "23d745e7-e8ee-48f2-9c23-a121e1b159ac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MagnetBoot",
                    "type": "Button",
                    "id": "7d08a639-2810-4e9d-981b-e210505ad4dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c924e3eb-6768-4d59-bdbc-c1be77775175",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PoleSwitching",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10cce88d-5143-422a-8693-d593cf8dcbe0",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PoleSwitching",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d1559a0-5fb1-41f6-9a9a-fd4aa923ce8c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff44e604-54b3-47f8-b266-f26e1b91291e",
                    "path": "<Keyboard>/arrowLeft",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a0aa4fd-a464-4f63-8edf-6661befb788b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e31c8199-20a7-4129-8ede-e52b19ec7729",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4637eaaf-f5e1-4e25-adad-54470dcda532",
                    "path": "<Keyboard>/arrowRight",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5214d64-62ee-45a4-9c42-2ce4a943433a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89338c96-a8db-4754-9569-8d6c4206d815",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cceee815-7287-4466-b134-ac881276cd46",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0aa715eb-6ec6-4976-a681-07cd8a152df4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a32d47a7-15b3-4f64-822f-f35fff8e2e7a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0365c62-63e5-4fda-9960-16a2bc3072b2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05635345-c20c-4c97-b3b5-0317bb8f19d6",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3761692-4625-4ad9-91ad-97557c51d7bb",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootAngle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ee62d67-b991-4c9f-99a3-050dc4010d40",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootAngle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb1aff1d-5b53-407b-ab32-5912ffbedd12",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MagnetPower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a59ec944-dc71-46b5-9a62-baf4a4f2e2dc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MagnetPower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29db3eea-0ea7-4bc8-89c0-52c6187d8720",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MagnetBoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "560477d5-c5ee-4513-815f-606bfce35fd1",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MagnetBoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "d24e8da8-ade3-4bcc-ad28-f9dfb083239d",
            "actions": [
                {
                    "name": "ViewMode",
                    "type": "Button",
                    "id": "4bd2fa1e-e8c3-4cfd-9514-605f7dd31d63",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "ViewLeftMove",
                    "type": "Value",
                    "id": "2f34e169-5146-4fe1-8f60-8ce192e90845",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "431e7c71-b07e-484f-a767-3d459de86e2f",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f61da18-3ccf-474c-8d61-1492f7bfae8a",
                    "path": "<Gamepad>/rightStickPress ",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "9272d9f0-fc28-46ab-954c-f6e2ae45c787",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewLeftMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "04984666-bd55-4ebc-aafd-5c8eed5f874b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewLeftMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "67010bc5-6e6e-4b7d-8e9f-1b867561f29d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewLeftMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "98a00034-d8d4-4083-926a-e8a210ccfedd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewLeftMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "abf32781-870a-453c-8d23-92578c7b5b2c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewLeftMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "28111f07-f33c-48ce-9ccd-452d1d307840",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewLeftMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "b2547cae-98fb-4a81-a752-8fe0258c5d78",
            "actions": [
                {
                    "name": "MenuOpen",
                    "type": "Button",
                    "id": "050ff628-8ad3-404b-aa37-471ff068135c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Decision",
                    "type": "Button",
                    "id": "1b099ebc-ced3-43dd-b50b-7d00e78f7127",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "3c607b68-70e3-4780-a3f7-d27866a677e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "49bf61b4-4030-4c86-8de7-b3d7daf3f974",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "feab3783-cb61-469c-a2e1-806ca66ca24a",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuOpen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "faf11131-0234-4edc-9e8f-1134e700fdd6",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuOpen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4902b6be-803a-4ae6-808d-65f63bb84c7e",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuOpen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccce6447-deb1-4140-a124-ae4353a7342d",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Decision",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33b0a191-28ba-4298-9c28-6e49ed2ce51a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Decision",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90f07683-cef1-481a-8715-212296c91f36",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Decision",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40da29f4-c29d-46b2-82b1-ee298449f853",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec6669fa-0ee5-465f-877a-f5c7917e06f9",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d654e903-37a8-48b8-a481-39a1ba2eb80a",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Shortcut",
            "id": "6d50c6dd-15e7-4da5-908d-ab5d612c29e1",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "35a7d147-05a8-4b79-a02e-589df679b3fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dca733f3-488d-4400-927a-eb2ced907612",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "44529aae-1b95-4893-9eae-eb9ce90eabba",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "d4153a59-7e09-456b-8de3-a708b811d716",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": []
        }
    ],
    "controlSchemes": []
}